--- a/4-Magic/4.1.md
+++ b/4-Magic/4.1.md
@@ -327,13 +327,9 @@ The spells below are listed in alphabetical order and are available in both Diab
 | **Damage Reduction in Diablo** | 33% |
 | **Damage Reduction in Hellfire** | See below |
 | **Duration**  | Until mana reaches 0 or you leave the current dlvl |
-| **Note for Hellfire only:** | |
-| - A Mana Shield decreases the damage taken, but due to a bug, the reduction actually decreases as slvl goes up. |
-| - The damage is reduced by the following amount: 100 / (3 × slvl)% |
-| - If slvl is higher than 7, set slvl to 7. |
-| **Note for both Diablo and Hellfire:** | |
-| - For slvl 0, there is never any reduction of the damage. |
-| - Due to a bug, you will neither be stunned nor pushed back by *the bear* or Diablo if you receive damage (before modification by the Mana Shield) greater than your current life. |
+| **Note for Hellfire only:** | - A Mana Shield decreases the damage taken, but due to a bug, the reduction actually decreases as slvl goes up.<br> - The damage is reduced by the following amount: 100 / (3 × slvl)%<br> - If slvl is higher than 7, set slvl to 7. |
+| **Note for both Diablo and Hellfire:** | - For slvl 0, there is never any reduction of the damage.<br> - Due to a bug, you will neither be stunned nor pushed back by *the bear* or Diablo if you receive damage (before modification by the Mana Shield) greater than your current life. |
+
 
 | **Nova**  |  |
 |--------------|--------------------------------------------------------------|
@@ -350,48 +346,33 @@ The spells below are listed in alphabetical order and are available in both Diab
 | **Phasing**  |  |
 |-------------|--------------------------------------------------------------|
 | **Type**    | n/a |
-| **Note:**   | |
-| - Due to being a non-targeting spell, it is slightly faster than Teleport, and it may thus be easier to escape with this spell than with Teleport. |
+| **Note:**   | - Due to being a non-targeting spell, it is slightly faster than Teleport, and it may thus be easier to escape with this spell than with Teleport. |
 
 | **Resurrect**  |  |
 |---------------|--------------------------------------------------------------|
 | **Type**      | n/a |
-| **Note:**     | |
-| - Brings another player back to life. |
-| - The player will have 10 life (or their max life if it is less than 10) and 0 mana. |
+| **Note:**     | - Brings another player back to life.<br> - The player will have 10 life (or their max life if it is less than 10) and 0 mana. |
 
 | **Stone Curse** |  |
 |---------------|--------------------------------------------------------------|
 | **Type**      | n/a |
 | **Duration**  | 4.8 + 0.8×slvl seconds (max 12 seconds) |
-| **Note:**     | |
-| - Stone Curse works on all monsters except Diablo and Na-Krul. |
-| - Stone Curse does not work on other players. |
-| - Any monster already stoned, charging, phasing in, or phasing out is temporarily immune to Stone Curse. |
+| **Note:**     | - Stone Curse works on all monsters except Diablo and Na-Krul.<br> - Stone Curse does not work on other players.<br> - Any monster already stoned, charging, phasing in, or phasing out is temporarily immune to Stone Curse. |
 
 | **Telekinesis** |  |
 |---------------|--------------------------------------------------------------|
 | **Type**      | n/a |
-| **Note:**     | |
-| - Can be used to open doors, chests, bookcases, shrines, etc. from a distance. |
-| - Can also be used to pick up items from a distance. |
-| - Can be used to “knock” monsters back. This “attack,” although it does not inflict any damage, is sufficient for receiving full experience points when the monster later dies. |
-| - The following Unique or Special monsters are immune to Telekinesis: **Snotspill, Gharbad the Weak, Zhar the Mad, Warlord of Blood, Lachdanan, Arch-Bishop Lazarus, Blackjade, and Red Vex.** |
-| - A monster will immediately lose any **Stone Curse** status if it is targeted with Telekinesis. |
+| **Note:**     | - Can be used to open doors, chests, bookcases, shrines, etc. from a distance.<br> - Can also be used to pick up items from a distance.<br> - Can be used to “knock” monsters back. This “attack,” although it does not inflict any damage, is sufficient for receiving full experience points when the monster later dies.<br> - The following Unique or Special monsters are immune to Telekinesis: **Snotspill, Gharbad the Weak, Zhar the Mad, Warlord of Blood, Lachdanan, Arch-Bishop Lazarus, Blackjade, and Red Vex.**<br> - A monster will immediately lose any **Stone Curse** status if it is targeted with Telekinesis. |
 
 | **Teleport** |  |
 |------------|--------------------------------------------------------------|
 | **Type**   | n/a |
-| **Note:**  | |
-| - You can teleport to anywhere within the screen. |
-| - If you quickly move your cursor before teleporting, you often end up teleporting to where your cursor was just before you moved it. |
+| **Note:**  | - You can teleport to anywhere within the screen.<br> - If you quickly move your cursor before teleporting, you often end up teleporting to where your cursor was just before you moved it. |
 
 | **Town Portal** |  |
 |---------------|--------------------------------------------------------------|
 | **Type**      | n/a |
-| **Note:**     | |
-| - Creates a portal to town. |
-| - The portal disappears when the caster uses it to go back down into the dungeon. |
+| **Note:**     | - Creates a portal to town.<br> - The portal disappears when the caster uses it to go back down into the dungeon. |
 
 
 ### 4.1.4 New spells in Hellfire
@@ -401,14 +382,7 @@ The spells in the table below are new spells in Hellfire. Apocalypse and Nova, a
 | **Berserk** |  |
 |------------|--------------------------------------------------------------|
 | **Type**   | Magic |
-| **Note:**  | |
-| - All unique and special monsters are immune to Berserk. |
-| - Any monster charging, phasing in, or phasing out is temporarily immune to Berserk. |
-| - When cast on a monster, it will consider other monsters as possible targets too. |
-| - It increases the damage done by the monster by between 20 and 30%, plus the level of the spell (possible overflow issue if value exceeds 255). |
-| - You will not receive experience for monsters killed by a berserk monster. |
-| - Monsters resistant to Magic have a 50% chance of escaping the spell. |
-| - Monsters immune to Magic are completely immune to this spell. |
+| **Note:**  | - All unique and special monsters are immune to Berserk.<br> - Any monster charging, phasing in, or phasing out is temporarily immune to Berserk.<br> - When cast on a monster, it will consider other monsters as possible targets too.<br> - It increases the damage done by the monster by between 20 and 30%, plus the level of the spell (possible overflow issue if value exceeds 255).<br> - You will not receive experience for monsters killed by a berserk monster.<br> - Monsters resistant to Magic have a 50% chance of escaping the spell.<br> - Monsters immune to Magic are completely immune to this spell. |
 
 | **Immolation** |  |
 |--------------|--------------------------------------------------------------|
@@ -420,9 +394,7 @@ The spells in the table below are new spells in Hellfire. Apocalypse and Nova, a
 | **Real Damage** | Rec(slvl, (Itt(5, Rnd[6]) + clvl + 5)/2) |
 | **Number of Bolts** | 92 |
 | **Speed** | 16 + slvl |
-| **Note:** | |
-| - Does the same damage as Nova. |
-| - Immolation uses bolts that are essentially fireballs (including splash damage), but they have a different damage calculation and speed compared to normal fireballs. |
+| **Note:** | - Does the same damage as Nova.<br> - Immolation uses bolts that are essentially fireballs (including splash damage), but they have a different damage calculation and speed compared to normal fireballs. |
 
 | **Jester** |  |
 |------------|--------------------------------------------------------------|
@@ -437,8 +409,7 @@ The spells in the table below are new spells in Hellfire. Apocalypse and Nova, a
 | Teleport | 10% |
 | Town Portal | 10% |
 | Stone Curse | 10% |
-| **Note:** | |
-| - This spell can only occur on staves and casts a random spell. |
+| **Note:** | - This spell can only occur on staves and casts a random spell. |
 
 | **Lightning Wall** |  |
 |-------------------|--------------------------------------------------------------|
@@ -450,15 +421,12 @@ The spells in the table below are new spells in Hellfire. Apocalypse and Nova, a
 | **Number of Bolts** | 11 |
 | **Blockable**    | No |
 | **Note:** | |
-| - The central Lightning Wall bolt actually consists of two bolts on top of each other, effectively doubling the damage of that "bolt." |
-| - Does twice the damage of a Fire Wall and lasts longer. |
-| - The lightning effect will try to hit once every 0.05 seconds for a total of 255 + 255×slvl times. |
+| - The central Lightning Wall bolt actually consists of two bolts on top of each other, effectively doubling the damage of that "bolt."<br> - Does twice the damage of a Fire Wall and lasts longer.<br> - The lightning effect will try to hit once every 0.05 seconds for a total of 255 + 255×slvl times. |
 
 | **Magi** |  |
 |---------|--------------------------------------------------------------|
 | **Type** | n/a |
-| **Note:** | |
-| - Completely restores mana. |
+| **Note:** | - Completely restores mana. |
 
 | **Mana** |  |
 |---------|--------------------------------------------------------------|
@@ -470,19 +438,13 @@ The spells in the table below are new spells in Hellfire. Apocalypse and Nova, a
 | Sorcerer | 2.0 |
 | Rogue and Bard | 1.5 |
 | Warrior, Monk, and Barbarian | 1.0 |
-| **Note:** | |
-| - The actual distribution of healing is bell curve-shaped. |
-| - This spell works like Healing but affects your mana instead of your life. |
+| **Note:** | - The actual distribution of healing is bell curve-shaped.<br> - This spell works like Healing but affects your mana instead of your life. |
 
 | **Reflect** |  |
 |------------|--------------------------------------------------------------|
 | **Type** | n/a |
 | **Duration** | slvl × clvl hits |
-| **Note:** | |
-| - Reduces melee damage by 20-29% and reflects it back to the attacking monster. Spell level determines the number of hits it lasts. |
-| - Even if you block an attack, 20-29% of the damage is reflected back to the attacking monster. |
-| - An attack counts as a hit even if you block it, as it will reflect some damage. |
-| - The Reflect effect will be terminated if you die or leave the current dungeon level. |
+| **Note:** | - Reduces melee damage by 20-29% and reflects it back to the attacking monster. Spell level determines the number of hits it lasts.<br> - Even if you block an attack, 20-29% of the damage is reflected back to the attacking monster.<br> - An attack counts as a hit even if you block it, as it will reflect some damage.<br> - The Reflect effect will be terminated if you die or leave the current dungeon level. |
 
 | **Ring of Fire** |  |
 |----------------|--------------------------------------------------------------|
@@ -494,25 +456,18 @@ The spells in the table below are new spells in Hellfire. Apocalypse and Nova, a
 | **Extended Duration in Hellfire** | 8 + 8 × slvl seconds (12 + 8 × slvl in Hellfire) |
 | **Number of Flames** | 22 |
 | **Blockable** | No |
-| **Note:** | |
-| - Does the same damage as a Fire Wall and lasts the same amount of time. |
-| - The Ring of Fire will disappear immediately if you gain any level in the spell. |
-| - Fire Walls are treated as traps against players, including the caster. |
-| - The flame will try to hit once every 0.05 seconds for a total of 160 + 160 × slvl times. |
+| **Note:** | - Does the same damage as a Fire Wall and lasts the same amount of time.<br> - The Ring of Fire will disappear immediately if you gain any level in the spell.<br> - Fire Walls are treated as traps against players, including the caster.<br> - The flame will try to hit once every 0.05 seconds for a total of 160 + 160 × slvl times. |
 
 | **Search** |  |
 |------------|--------------------------------------------------------------|
 | **Type** | n/a |
 | **Duration** | 12.25 + 10 × slvl + clvl seconds |
-| **Note:** | |
-| - Makes items on the ground shine. |
-| - Makes items show up on the map. |
+| **Note:** | - Makes items on the ground shine.<br> - Makes items show up on the map. |
 
 | **Warp** |  |
 |------------|--------------------------------------------------------------|
 | **Type** | n/a |
-| **Note:** | |
-| - Teleports you to the nearest stair. |
+| **Note:** | - Teleports you to the nearest stair. |
 
 
 ### 4.1.5 Mana cost and magic requirements for spells
