--- a/4-Magic/4.2.md
+++ b/4-Magic/4.2.md
@@ -2,157 +2,200 @@
 
 Some monsters have the ability to do magical attacks. Monsters in Diablo can only use spells that are available to the player (although they work a bit differently in regard to damage, for example), except for Spitting Terrors. In Hellfire, there are many new monsters that also have the ability to do magical attacks. Often those are new ones that are not available to the player in any way. The tables below summarize all monsters with magical attacks as well as what type of magic it is (not always obvious).
 
-|<a name="page81"></a>**Jarulf’s Guide to Diablo and Hellfire, v1.62**|**Created by Pedro Faria**||||
-| :- | :- | :- | :- | :- |
-||||||
-||**Type**|**Monster**|**Spell/Attack**||
-||**Magic**|Succubi|Blood Star||
-|||Blightfire (Unique Goat Man)|Blood Star||
-|||All Mages|Flash||
-|||Spitting Terrors|Spit1||
-|||Psychorb|Magic Attack1||
-|||Necromorb|Magic Attack1||
-|||Spider Lord|Spit1||
-|||Bone Demon|Magic Attack1||
-|||Lich|Magic Attack1||
-|||Arch Lich|Magic Attack1||
-||1  These monsters cast spells that are not available to characters.||||
-||||||
-||**Type**|**Monster**|**Spell/Attack**||
-||**Fire**|Counselor|Firebolt||
-|||Advocate|Fireball||
-|||Balrog|Inferno||
-|||Torchant|Fireball||
-|||Fire Bat|Firebolt||
-|||Hell Bat|Fireball||
-||||||
-||**Type**|**Monster**|**Spell/Attack**||
-||**Lightning**|Familiars|Single stationary Charged Bolt||
-|||Magistrate|Charged Bolt||
-|||Lightning Demons|Lightning||
-|||Cabalist|Lightning||
-||||||
-||**Type**|**Monster**|**Spell/Attack**||
-||**Other**|Diablo|Apocalypse||
-|||Skeleton Archer|Arrow1||
-|||Goat Archer|Arrow1||
-1. Arrows is of course not a spell, but is in many ways technically handled as a spell (with some special cases) by the game. For ease of use together with other parts of this Guide, it is thus useful to list arrow attacks here.
+#### Magic
+
+| **Monster**            | **Spell/Attack**   |
+|----------------------|------------------|
+| Succubi               | Blood Star       |
+| Blightfire (Unique Goat Man) | Blood Star |
+| All Mages              | Flash           |
+| Spitting Terrors       | Spit<sup>[^1]</sup> |
+| Psychorb               | Magic Attack<sup>[^1]</sup> |
+| Necromorb              | Magic Attack<sup>[^1]</sup> |
+| Spider Lord            | Spit<sup>[^1]</sup> |
+| Bone Demon             | Magic Attack<sup>[^1]</sup> |
+| Lich                   | Magic Attack<sup>[^1]</sup> |
+| Arch Lich              | Magic Attack<sup>[^1]</sup> |
+
+[^1]: These monsters cast spells that are not available to characters.
+
+#### Fire
+| **Monster** | **Spell/Attack** |
+|-------------|------------------|
+| Counselor   | Firebolt         |
+| Advocate    | Fireball         |
+| Balrog      | Inferno          |
+| Torchant    | Fireball         |
+| Fire Bat    | Firebolt         |
+| Hell Bat    | Fireball         |
+
+#### Lightning
+| **Monster**      | **Spell/Attack**               |
+|------------------|--------------------------------|
+| Familiars        | Single stationary Charged Bolt |
+| Magistrate       | Charged Bolt                   |
+| Lightning Demons | Lightning                      |
+| Cabalist         | Lightning                      |
+
+#### Physical
+| **Monster**     | **Spell/Attack**     |
+|-----------------|----------------------|
+| Diablo          | Apocalypse           |
+| Skeleton Archer | Arrow<sup>[^1]</sup> |
+| Goat Archer     | Arrow<sup>[^1]</sup> |
+
+[^1]: Arrows are not spells, but they are technically handled as spells in many ways by the game (with some special cases). For consistency with other parts of this guide, arrow attacks are listed here.
+
 
 
 ### 4.2.1 Details about monster spells in Diablo
 
 Below are listed all those spells that monsters are able to use. In most cases they are identical to the ones used by players. although some differences can exist. If the damage is stated as *min - max*, the damage is identical to the one listed for melee damage in chapter 5. Note that the charge attacks some monsters can do are, in fact, treated by the game as a type of ”spell,” where the monster itself is the ”spell” projectile. Upon hitting it will do normal melee damage. See chapter 6.1.7 for more information.
 
-|**Apocalypse**|**Arrow**|
-| :- | :- |
-|Type: n/a|Type: n/a|
-|Damage: 40|Damage: min - max|
-|Blockable: Yes|Speed: 32|
-||Blockable: Yes|
-|Note:|Note:|
-|\*  Only Diablo can cast apocalypse.|\*  See chapter 5.2.1 for information about min and max|
-||damage for monsters.|
-||\*  Arrow is of course not a spell, but is in many ways|
-||technically handled as a spell (with some special cases)|
-||by the game. For ease of use together with other parts|
-||of this Guide, it is thus useful to list arrow attacks|
-||here.|
+| **Apocalypse** |  |
+|--------------|--------------------------------------------------------------|
+| **Type** | n/a |
+| **Damage** | 40 |
+| **Blockable** | Yes |
+| **Note:** | - Only Diablo can cast Apocalypse. |
 
-|<a name="page82"></a>**Jarulf’s Guide to Diablo and Hellfire, v1.62**|**Created by Pedro Faria**||
-| :- | :- | :- |
-||||
-|**Blood Star**|**Charged Bolt**||
-|Type: magic|Type: lightning||
-|Damage: min - max|Damage Magistrate: 15||
-|Speed: 16|Damage Familiars: 1 - 10||
-|Blockable: Yes|Number of bolts:||
-||Speed: 8||
-||Blockable: Yes||
-|Note:|||
-|\*  See chapter 5.2.1 for information about min and max|||
-|damage for monsters.|||
-||||
-|**Fireball**|**Firebolt**||
-|Type: fire|Type: fire||
-|Damage: min - max|Damage: min - max||
-|Speed: 16|Speed: 16||
-|Blockable: Yes|Blockable: Yes||
-|Note:|Note:||
-|\*  See chapters 5.2.1 and 5.2.3 for information about|\*  See chapters 5.2.1 and 5.2.3 for information about||
-|min and max damage for monsters.|min and max damage for monsters.||
-||||
-|**Flash**|**Inferno**||
-|Type: magic|Type: fire||
-|Damage 1: mlvl/32|Damage: min/64 - max/64||
-|Damage 2: 4/64|Range: 3||
-|Duration: 0.95 seconds|Duration: 1, 1.25 and 1.50 seconds||
-|Blockable: No|Blockable: No||
-|\*  The Flash spell is actually composed of two different|Note:||
-|effects, the two different Damages given are for the|\*  See chapter 5.2.1 for information about min and max||
-|two different effects. The first hit in front of the|damage for monsters.||
-|monster and to the sides, the other behind the|\*  The three values for duration are for the three target||
-|monster.|locations, starting with the one closest to the caster.||
-|\*  The flash will try to hit once every 0.05 seconds for a|\*  The flame will try to hit once every 0.05 seconds for a||
-|total of 19 times.|total of 20, 25 and 30 times.||
-||||
-|**Lightning**|**Magma Ball**||
-|Type: lightning|Type: fire||
-|Damage: min/32 - max/32|Damage: min - max||
-|Speed: 32|Speed: 16||
-|Duration: 0.5 seconds|Blockable: Yes||
-|Blockable: No|||
-|\*  The lightning is actually a stationary effect, but the|Note:||
-|initiation will be delayed the further away it appears,|\*  See chapters 5.2.1 and 5.2.3 for information about||
-|thus giving an appearance of moving. This delay|min and max damage for monsters.||
-|”travels” with a speed of 32.|||
-|\*  The bolt will try to hit once every 0.05 seconds for a|||
-|total of 10 times.|||
+| **Arrow** |  |
+|---------|----------------------------------------------------------------------------------------------------------------------------------|
+| **Type** | n/a |
+| **Damage** | min - max |
+| **Speed** | 32 |
+| **Blockable** | Yes |
+| **Note:** | - See chapter 5.2.1 for information about min and max damage for monsters.<br> - Arrow is not a spell but is technically handled as a spell (with some special cases) by the game.<br> - For consistency with other parts of this guide, arrow attacks are listed here. |
 
-|<a name="page83"></a>**Jarulf’s Guide to Diablo and Hellfire, v1.62**|**Created by Pedro Faria**||
-| :- | :- | :- |
-||||
-|**Spit Attack**|**Spit Puddle**||
-|Type: magic|Type: magic||
-|Damage: min - max|Damage (spit attack): 1/32||
-|Speed: 16|Damage (dead Acid Beasts): (Intf + 1)/64||
-|Duration: 20 + Intf×5|Duration: 2×(Intf + 1) + Rnd[15]/20 seconds||
-|Blockable: Yes|Blockable: No||
-|Note:|Note:||
-|\*  See chapters 5.2.1 and 5.2.3 for information about|\*  See chapter 5.3.3 for information about intelligence||
-|min and max damage for monsters.|factors (Intf) for monsters.||
-|\*  See chapter 5.3.3 for information about intelligence|\*  The puddle will try to hit once each 0.05 second for a||
-|factors (Intf) for monsters.|total of (Intf + 1)×2 + Rnd[15] times.||
-|\*  The duration is actually what determines the distance|||
-|a monster can spit.|||
+| **Blood Star** |  |
+|--------------|--------------------------------------------------------------|
+| **Type** | Magic |
+| **Damage** | min - max |
+| **Speed** | 16 |
+| **Blockable** | Yes |
+| **Note:** | - See chapter 5.2.1 for information about min and max damage for monsters. |
+
+| **Charged Bolt** |  |
+|----------------|----------------------------------------------------------------|
+| **Type** | Lightning |
+| **Damage (Magistrate)** | 15 |
+| **Damage (Familiars)** | 1 - 10 |
+| **Number of Bolts** | Varies |
+| **Speed** | 8 |
+| **Blockable** | Yes |
+
+| **Fireball** |  |
+|------------|--------------------------------------------------------------|
+| **Type** | Fire |
+| **Damage** | min - max |
+| **Speed** | 16 |
+| **Blockable** | Yes |
+| **Note:** | - See chapters 5.2.1 and 5.2.3 for information about min and max damage for monsters. |
+
+| **Firebolt** |  |
+|------------|--------------------------------------------------------------|
+| **Type** | Fire |
+| **Damage** | min - max |
+| **Speed** | 16 |
+| **Blockable** | Yes |
+| **Note:** | - See chapters 5.2.1 and 5.2.3 for information about min and max damage for monsters. |
+
+| **Flash** |  |
+|------------|--------------------------------------------------------------|
+| **Type** | Magic |
+| **Damage 1** | mlvl / 32 |
+| **Damage 2** | 4 / 64 |
+| **Duration** | 0.95 seconds |
+| **Blockable** | No |
+| **Note:** | - The *Flash* spell is actually composed of two different effects; the two different damage values given are for these effects.<br> - The first effect hits in front of the monster and to the sides, while the second effect hits behind the monster.<br> - The flash will try to hit once every 0.05 seconds for a total of 19 times. |
+
+| **Inferno** |  |
+|------------|--------------------------------------------------------------|
+| **Type** | Fire |
+| **Damage** | min / 64 - max / 64 |
+| **Range** | 3 |
+| **Duration** | 1, 1.25, and 1.50 seconds |
+| **Blockable** | No |
+| **Note:** | - See chapter 5.2.1 for information about min and max damage for monsters.<br> - The three duration values correspond to the three target locations, starting with the one closest to the caster.<br> - The flame will try to hit once every 0.05 seconds for a total of 20, 25, and 30 times. |
+
+| **Lightning** |  |
+|------------|--------------------------------------------------------------|
+| **Type** | Lightning |
+| **Damage** | min / 32 - max / 32 |
+| **Speed** | 32 |
+| **Duration** | 0.5 seconds |
+| **Blockable** | No |
+| **Note:** | - The *Lightning* spell is actually a stationary effect, but its initiation is delayed the further away it appears, giving the appearance of movement.<br> - This delay "travels" with a speed of 32.<br> - The bolt will try to hit once every 0.05 seconds for a total of 10 times. |
+
+| **Magma Ball** |  |
+|------------|--------------------------------------------------------------|
+| **Type** | Fire |
+| **Damage** | min - max |
+| **Speed** | 16 |
+| **Blockable** | Yes |
+| **Note:** | - See chapters 5.2.1 and 5.2.3 for information about min and max damage for monsters. |
+
+
+| **Spit Attack** |  |
+|------------|--------------------------------------------------------------|
+| **Type** | Magic |
+| **Damage** | min - max |
+| **Speed** | 16 |
+| **Duration** | 20 + Intf × 5 |
+| **Blockable** | Yes |
+| **Note:** | - See chapters 5.2.1 and 5.2.3 for information about min and max damage for monsters.<br> - See chapter 5.3.3 for information about intelligence factors (Intf) for monsters.<br> - The duration actually determines the distance a monster can spit. |
+
+| **Spit Puddle** |  |
+|------------|--------------------------------------------------------------|
+| **Type** | Magic |
+| **Damage (Spit Attack)** | 1 / 32 |
+| **Damage (Dead Acid Beasts)** | (Intf + 1) / 64 |
+| **Duration** | 2 × (Intf + 1) + Rnd[15] / 20 seconds |
+| **Blockable** | No |
+| **Note:** | - See chapter 5.3.3 for information about intelligence factors (Intf) for monsters.<br> - The puddle will try to hit once every 0.05 seconds for a total of (Intf + 1) × 2 + Rnd[15] times. |
+
 
 ### 4.2.2 Details about new monster spells in Hellfire
 
 Most new monsters in Hellfire that can use spells have new special spells not available to players, although some use ”old” spells. Below are listed all new spells monsters in Hellfire can use. If the damage given is stated as *min - max*, the damage is identical to the one listed for melee damage in chapter 5.
 
-|**Arch Lich attack**|**Bone Demon attack**|
-| :- | :- |
-|Type: magic|Type: magic|
-|Damage: min - max|Damage: min - max|
-|Speed: 16|Speed: 16|
-|Blockable: Yes|Blockable: Yes|
-|Note:|Note:|
-|\*  See chapters 5.2.1 and 5.2.3 for information about|\*  See chapters 5.2.1 and 5.2.3 for information about|
-|min and max damage for monsters.|min and max damage for monsters.|
-|||
-|**Lich attack**|**Necromorb attack**|
-|Type: magic|Type: magic|
-|Damage: min - max|Damage: min - max|
-|Speed: 16|Speed: 16|
-|Blockable: Yes|Blockable: Yes|
-|Note:|Note:|
-|\*  See chapters 5.2.1 and 5.2.3 for information about|\*  See chapters 5.2.1 and 5.2.3 for information about|
-|min and max damage for monsters.|min and max damage for monsters.|
-|||
-|**Psychorb attack**||
-|Type: magic||
-|Damage: min - max||
-|Speed: 16||
-|Blockable: Yes||
-|Note:||
-|\*  See chapters 5.2.1 and 5.2.3 for information about||
-|min and max damage for monsters.||
+| **Arch Lich Attack** |  |
+|------------------|--------------------------------------------------------------|
+| **Type** | Magic |
+| **Damage** | min - max |
+| **Speed** | 16 |
+| **Blockable** | Yes |
+| **Note:** | - See chapters 5.2.1 and 5.2.3 for information about min and max damage for monsters. |
+
+| **Bone Demon Attack** |  |
+|------------------|--------------------------------------------------------------|
+| **Type** | Magic |
+| **Damage** | min - max |
+| **Speed** | 16 |
+| **Blockable** | Yes |
+| **Note:** | - See chapters 5.2.1 and 5.2.3 for information about min and max damage for monsters. |
+
+
+| **Lich Attack** |  |
+|------------------|--------------------------------------------------------------|
+| **Type** | Magic |
+| **Damage** | min - max |
+| **Speed** | 16 |
+| **Blockable** | Yes |
+| **Note:** | - See chapters 5.2.1 and 5.2.3 for information about min and max damage for monsters. |
+
+| **Necromorb Attack** |  |
+|------------------|--------------------------------------------------------------|
+| **Type** | Magic |
+| **Damage** | min - max |
+| **Speed** | 16 |
+| **Blockable** | Yes |
+| **Note:** | - See chapters 5.2.1 and 5.2.3 for information about min and max damage for monsters. |
+
+| **Psychorb Attack** |  |
+|------------------|--------------------------------------------------------------|
+| **Type** | Magic |
+| **Damage** | min - max |
+| **Speed** | 16 |
+| **Blockable** | Yes |
+| **Note:** | - See chapters 5.2.1 and 5.2.3 for information about min and max damage for monsters. |
