--- a/4-Magic/4.3.md
+++ b/4-Magic/4.3.md
@@ -2,97 +2,75 @@
 
 Most traps are of magical nature, and thus it is appropriate to explain how they work here. Traps can be set off when you open chests, sarcophagi, barrels, or doors. There are 7 different types of traps (including skeletons) in the original Diablo. Three new ones were added in Hellfire. The probability of a trap is shown in the table below. Traps originating from shrines are not covered by this guide.
 
-|<a name="page84"></a>**Jarulf’s Guide to Diablo and Hellfire, v1.62**|||**Created by Pedro Faria**|||||||
-| :- | :- | :- | :- | :- | :- | :- | :- | :- | :- |
-|||||||||||
-|||||<b>Probability of traps<sup>5</sup></b>||||||
-|**Origin**|**Church**|**Catacombs**|**Caves and Hive**|**Hell and Crypt**||||||
-|Chest in Diablo|trap:|0 %|arrow:|5 %|arrow:|3\.3 %|arrow:|3\.3 %||
-||||fire arrow:|5 %|fire arrow:|3\.3 %|fire arrow:|3\.3 %||
-||||||nova:|3\.3 %|nova:|3\.3 %||
-|Chest in Hellfire|trap:|0 %|arrow:|5 %|arrow:|1\.7 %|arrow:|1\.7 %||
-||||fire arrow:|5 %|fire arrow:|1\.7 %|fire arrow:|1\.7 %||
-||||||nova:|1\.7 %|nova:|1\.7 %||
-||||||ring of fire:|1\.7 %|ring of fire:|1\.7 %||
-||||||mana drain:|1\.7 %|mana drain:|1\.7 %||
-||||||disenchant:|1\.7 %|disenchant:|1\.7 %||
-|Sarcophagus|skeleton:|20 %|n/a|n/a||n/a||||
-|Barrel, Pods and Urns|explosion:|20%2|explosion:|20%2|explosion:|20%2|explosion:|20%2||
-|outside rooms|skeleton:|16%3|skeleton:|16%3|skeleton:|0 %|skeleton:|0 %||
-|Barrels, Pods and Urns|explosion:|50 %|explosion:|83 %|explosion:|75 %|explosion:|88 %||
-|inside rooms6|skeleton:|0 %|skeleton:|0 %|skeleton:|0 %|skeleton:|0 %||
-|**Origin**|**dlvl 1-2**|**dlvl 3-5**|**dlvl 6-8**|<b>dlvl 9-16<sup>4</sup></b>||||||
-|Doors5|arrow:|100 %|arrow:|50 %|arrow:|33\.3 %|n/a|||
-||||firebolt:|50 %|firebolt:|33\.3 %||||
-||||||lightning:|33\.3 %||||
-1. Sarcophagi only exist in the Crypt, never in Hell.
-1. In each cluster of barrels, pods and urns, the first barrel placed has a 25% chance having an explosion trap. All subsequent barrels have a 20% chance. As the number of barrels in a cluster is very hard to calculate accurately, I have used the value of 20% for all barrels. This will also affect the value for skeletons slightly, as it is 20% for a *non* exploding barrel.
+| **Origin** | **Church** | **Catacombs** | **Caves and Hive** | **Hell and Crypt** |
+|-----------|-----------|--------------|------------------|------------------|
+| **Chest in Diablo** | **Trap:** 0% | **Arrow:** 5% | **Arrow:** 3.3% | **Arrow:** 3.3% |
+|  |  | **Fire Arrow:** 5% | **Fire Arrow:** 3.3% | **Fire Arrow:** 3.3% |
+|  |  |  | **Nova:** 3.3% | **Nova:** 3.3% |
+| **Chest in Hellfire** | **Trap:** 0% | **Arrow:** 5% | **Arrow:** 1.7% | **Arrow:** 1.7% |
+|  |  | **Fire Arrow:** 5% | **Fire Arrow:** 1.7% | **Fire Arrow:** 1.7% |
+|  |  |  | **Nova:** 1.7% | **Nova:** 1.7% |
+|  |  |  | **Ring of Fire:** 1.7% | **Ring of Fire:** 1.7% |
+|  |  |  | **Mana Drain:** 1.7% | **Mana Drain:** 1.7% |
+|  |  |  | **Disenchant:** 1.7% | **Disenchant:** 1.7% |
+| **Sarcophagus** | **Skeleton:** 20% | n/a | n/a | n/a |
+| **Barrel, Pods, and Urns (Outside Rooms)** | **Explosion:** 20%<sup>[^2]</sup> | **Explosion:** 20%<sup>[^2]</sup> | **Explosion:** 20%<sup>[^2]</sup> | **Explosion:** 20%<sup>[^2]</sup> |
+|  | **Skeleton:** 16%<sup>[^3]</sup> | **Skeleton:** 16%<sup>[^3]</sup> | **Skeleton:** 0% | **Skeleton:** 0% |
+| **Barrels, Pods, and Urns (Inside Rooms<sup>[^6]</sup>)** | **Explosion:** 50% | **Explosion:** 83% | **Explosion:** 75% | **Explosion:** 88% |
+|  | **Skeleton:** 0% | **Skeleton:** 0% | **Skeleton:** 0% | **Skeleton:** 0% |
 
-1. Skeleton traps are, of course, only available if there are skeletons on the same level.
+| **Origin** | **dlvl 1-2** | **dlvl 3-5** | **dlvl 6-8** | **dlvl 9-16<sup>[^4]</sup>** |
+|-----------|-----------|--------------|------------------|------------------|
+| **Doors**<sup>[^5]</sup> | **Arrow:** 100% | **Arrow:** 50% | **Arrow:** 33.3% | n/a |
+|  |  | **Firebolt:** 50% | **Firebolt:** 33.3% |  |
+|  |  |  | **Lightning:** 33.3% |  |
 
-1. Hell and Crypt can’t have traps form doors.
+[^1]: Sarcophagi only exist in the Crypt, never in Hell.  
+[^2]: In each cluster of barrels, pods, and urns, the first barrel placed has a 25% chance of having an explosion trap. All subsequent barrels have a **20% chance**. As the number of barrels in a cluster is difficult to calculate accurately, **20%** is used as a general estimate. This also slightly affects the probability of skeleton traps, as **non-exploding barrels** have a **20%** chance of containing skeletons.  
+[^3]: Skeleton traps are **only available** if skeletons spawn on the same dungeon level.  
+[^4]: **Hell and Crypt cannot have trapped doors.**  
+[^5]: The probabilities for doors apply **only to doors that contain traps**. The probability of a door being trapped **depends on the dungeon layout**, requiring a **wall directly opposite the door**.  
+[^6]: "Rooms" also include **fenced areas in caves**. A room does **not necessarily require a door**—in the Catacombs and especially in Hell, many rooms **are open without doors**.  
 
-1. The probabilities for doors apply to doors that *do* have traps. It seems that the probability to have traps is linked to the actual dungeon layout for doors in that it needs a wall opposite to it.
-
-1. Rooms also includes the fenced locations in caves. A room does not necessarily need to have a door, in cats and especially in hell, many rooms just have an opening.
 
 For damage and other information about the traps, see below. For damage, when two values or formulas are given, the top one is minimum damage and the bottom one is maximum damage. With fire arrows, the maximum damage might at times be less than the minimum damage (possible on dlvl 1-8). In that case, the actual damage done is always identical to the minimum damage. The table also list some dungeon features that while not being traps, still deal damage to players.
 
-|<a name="page85"></a>**Jarulf’s Guide to Diablo and Hellfire, v1.62**||**Created by Pedro Faria**|||||
-| :- | :- | :- | :- | :- | :- | :- |
-||||||||
-|**Trap**|**Damage**|||**Speed/Duration**|**Other**||
-|Arrow|Min: dlvl|||32|Will fire an arrow, originating from the||
-||Max: 2×dlvl||||nearest wall.1||
-|Burning cross|Church:|6/64||n/a|The flame will hit once every 0.05 seconds||
-||Catacombs:|8/64|||for as long as you are standing in it.||
-||Caves:|10/64|||||
-||Hell:|12/64|||||
-|Fire Arrow|Min: dlvl + Rnd[10] + 1||32|Will fire an arrow, originating from the|||
-||Max: 2×dlvl + Rnd[10] + 1||nearest wall.1||||
-|Firebolt|dlvl + Rnd[2×dlvl]|||26|Will cast the spell Firebolt, originating||
-||||||from the nearest wall.1||
-|Lightning|(dlvl + Rnd[dlvl])/32||32 / 0.4 seconds2|Will cast the spell Lightning, originating|||
-||||||from the nearest wall.1||
-|Nova|Itt(3, Rnd[3]) + dlvl/2||32|Will cast the spell Nova, originating from|||
-||||||the chest.||
-|Exploding barrel|Min: 8|||n/a|An exploding barrel does fire damage and||
-||Max: 16||||is treated like a Firebolt hitting.||
-|Skeleton|n/a|||n/a|Will create a random skeleton of those||
-||||||present on the same dlvl.||
-|Ring of Fire|(Rnd[10] + Rnd[10] + dlvl|Unknown|Will cast the spell Ring of Fire, originating||||
-||+ 2)/8||||from the chest.||
-|Mana Drain|n/a|||n/a|Will drain you of all current mana. This||
-||||||trap has the ability to affect other players||
-||||||on the same dlvl.||
-|Disenchant potions|Full Healing:||Healing|For each potion in your belt, there is a|||
-||Full Mana:||Mana|50% chance that it will be replaced with|||
-||Full Rejuvenation:||Rejuvenation - 33%|another potion according to the left. If|||
-||||Full Healing - 33%|several possibilities exist, the chance is|||
-||||Full Mana - 33%|equal for all possibilities and shown after|||
-||Healing:||destroyed|the potion. This trap has the ability to|||
-||Mana:||destroyed|affect other players on the same dlvl.|||
-||Rejuvenation:||Healing - 50%||||
-||||Mana - 50%||||
-1. In caves, hell, the Hive, and the Crypt it will originate form the chest, pod or urn.
-1. The bolt will try to hit once every 0.05 seconds.
+| **Trap** | **Damage** | **Speed/Duration** | **Other** |
+|----------|-----------|----------------|------------|
+| **Arrow** | **Min:** dlvl / **Max:** 2×dlvl | **Speed:** 32 | Will fire an arrow, originating from the nearest wall.<sup>[^1]</sup> |
+| **Burning Cross** | **Church:** 6/64<br>**Catacombs:** 8/64<br>**Caves:** 10/64<br>**Hell:** 12/64 | n/a | The flame will hit once every 0.05 seconds for as long as you are standing in it. |
+| **Fire Arrow** | **Min:** dlvl + Rnd[10] + 1<br>**Max:** 2×dlvl + Rnd[10] + 1 | **Speed:** 32 | Will fire an arrow, originating from the nearest wall.<sup>[^1]</sup> |
+| **Firebolt** | **Damage:** dlvl + Rnd[2×dlvl] | **Speed:** 26 | Will cast the spell *Firebolt*, originating from the nearest wall.<sup>[^1]</sup> |
+| **Lightning** | **Damage:** (dlvl + Rnd[dlvl]) / 32 | **Speed:** 32 / **Duration:** 0.4 seconds<sup>[^2]</sup> | Will cast the spell *Lightning*, originating from the nearest wall.<sup>[^1]</sup> |
+| **Nova** | **Damage:** Itt(3, Rnd[3]) + dlvl/2 | **Speed:** 32 | Will cast the spell *Nova*, originating from the chest. |
+| **Exploding Barrel** | **Min:** 8 / **Max:** 16 | n/a | An exploding barrel does fire damage and is treated like a *Firebolt* hitting. |
+| **Skeleton** | n/a | n/a | Will create a random skeleton of those present on the same dlvl. |
+| **Ring of Fire** | **Damage:** (Rnd[10] + Rnd[10] + dlvl + 2) / 8 | Unknown | Will cast the spell *Ring of Fire*, originating from the chest. |
+| **Mana Drain** | n/a | n/a | Will drain you of all current mana. This trap has the ability to affect other players on the same dlvl. |
+| **Disenchant Potions** | **Full Healing:** Healing<br>**Full Mana:** Mana<br>**Full Rejuvenation:**<br>Rejuvenation - 33%<br>Full Healing - 33%<br>Full Mana - 33%<br>**Healing:** Destroyed<br>**Mana:** Destroyed<br>**Rejuvenation:**<br>Healing - 50%<br>Mana - 50% | n/a | For each potion in your belt, there is a **50% chance** that it will be replaced with another potion. If multiple possibilities exist, the chance is evenly distributed. This trap can affect other players on the same dlvl. |
+
+[^1]: In *Caves, Hell, the Hive,* and *the Crypt*, it will originate from the chest, pod, or urn.  
+[^2]: The *Lightning* bolt will try to hit **once every 0.05 seconds**.  
 
 
 **To Hit**
 
 To Hit for traps is calculated according to the formulas below.
 
-|To Hit for an arrow trap:|100 - AC/2|
-| :- | :- |
-|To Hit for a magic trap:|40|
+| **Trap Type** | **To Hit Formula** |
+|--------------|------------------|
+| **Arrow Trap** | 100 - AC/2 |
+| **Magic Trap** | 40 |
 
 As with attacks from monsters, there is also an automatic chance of hitting for traps, and it is listed below. Of course, the auto To Hit for magic traps is 40%, even on dungeon levels 14 to 16.
 
-|arrow trap:|10%|
-| :- | -: |
-|magic trap:|40%|
-|on dungeon level 14:|20%|
-|on dungeon level 15:|25%|
-|on dungeon level 16:|30%|
+| **Trap Type** | **Chance** |
+|--------------|---------:|
+| **Arrow Trap** | 10% |
+| **Magic Trap** | 40% |
+| **On Dungeon Level 14** | 20% |
+| **On Dungeon Level 15** | 25% |
+| **On Dungeon Level 16** | 30% |
+
 
 - magic traps includes Fire Wall, Flame Wave and Ring of Fire attacks from other players.
