--- a/5-Monsters/5.1.md
+++ b/5-Monsters/5.1.md
@@ -7,11 +7,12 @@ Data for nightmare and hell difficulties is calculated from the data for normal 
 
 Each monster can be one of three types: Undead, Animal or Demon. The type they are affects how much damage you do to them. It is summarized in the table below provided by Da O’Toth. The modifiers apply to the whole damage, that is, both to character and weapon damage. If a Bard is holding one sword and one club, the club takes precedence and it counts as having a club, *not* a sword. The modifications below are done even if the weapon equipped is red, and thus unusable, due to the requirements not being met.
 
-|**Weapon type**|**Undead**|**Animal**|**Demon**|
-| :- | :-: | :-: | :-: |
-|Swords|× 0.5|× 1.5|× 1.0|
-|Clubs|× 1.5|× 0.5|× 1.0|
-|Axes/Bows/Staves/Hands/Feet|× 1.0|× 1.0|× 1.0|
+| **Weapon Type** | **Undead Multiplier** | **Animal Multiplier** | **Demon Multiplier** |
+|---------------|:----------------:|:----------------:|:----------------:|
+| **Swords** | ×0.5 | ×1.5 | ×1.0 |
+| **Clubs** | ×1.5 | ×0.5 | ×1.0 |
+| **Axes / Bows / Staves / Unarmed** | ×1.0 | ×1.0 | ×1.0 |
+
 
 In addition to the above, monster type also affects if a monster will take damage from the spell Holy Bolt. Only undead monsters take damage from it. The only exception is Diablo who is a demon but yet takes damage from Holy Bolt. There are a few magical effects on items that are also dependent on monster type (+200% damage versus demons, extra AC versus undead, and extra AC versus demons, the last two only available in Hellfire). There are no other effects of the monster type.
 
@@ -20,11 +21,12 @@ In addition to the above, monster type also affects if a monster will take damag
 
 This tells on what dungeon level the monster can occur on. This does not differ between difficulty levels. For more information about probabilities of monsters occurring on a specific dungeon level, see chapter 5.3.2.
 
+**Monster Level**
 
-|**Monster level**||
-| :- | :- |
-|Nightmare:|normal + 15|
-|Hell:|normal + 30|
+| **Difficulty** | **Monster Level** |
+|----------------|-------------------|
+| **Nightmare**  | `Normal + 15`       |
+| **Hell**       | `Normal + 30`       |
 
 A monster’s level affects many things, including To Hit and experience points given. It also affects how fast it regenerates hit points, what treasures it can drop, and many other things. For some unique monsters, one should add +30/+60 instead of the normal +15/+30. For information about this, see chapter 5.4.
 
@@ -33,31 +35,34 @@ A monster’s level affects many things, including To Hit and experience points 
 
 First note that all data for hit points is based on the value for normal multi player (even in Hellfire). To calculate the hit points for normal single player, divide the hit points for normal multi player by 2 and round down (1 minimum though). For higher difficulty levels then use:
 
-Nightmare:	3×normal + 1 (+50 in Hellfire single player and +100 in Hellfire multi player)
+| **Difficulty**  | **Hit Points** |
+|---------------|--------------------------------|
+| **Nightmare** | `3 × normal + 1` (`+50` in *Hellfire* single player, `+100` in *Hellfire* multiplayer) |
+| **Hell**      | `4 × normal + 3` (`+100` in *Hellfire* single player, `+200` in *Hellfire* multiplayer) |
 
-Hell:	4×normal + 3 (+100 in Hellfire single player and +200 in Hellfire multi player)
 
 Note that there is a bug in Diablo previous to v1.07 and in the unpatched Hellfire (v1.00). This bug was ”corrected” differently in Hellfire and Diablo. In the tables the hit points for single player are correct for both Diablo and Hellfire (remember that in Diablo, only normal difficulty exists for single player). For multi player, the shown hit points are for Diablo; for Hellfire, you need to add 99 and 197 hit points in nightmare and hell difficulties respectively.
 
 All monsters regenerate hit points. The rate is about 10×mlvl/64 hit points per second. Some monsters might regenerate it faster in some circumstance. Gargoyles, Scavengers and Grave Diggers will all, after having taken a certain amount of damage, move away and start *healing*. Gargoyles do so when in their stone form, while the other two need a carcass of a monster to eat or dig upon. The table below summarize monster regeneration of hit points.
 
-|**Monster type**|**When to start healing**|**When to stop healing**|<b>Rate<sup>1</sup></b>|
-| :- | :-: | :-: | :- |
-|Scavenger|HP < maxHP/2|HP > 3×maxHp/4|1\.82 hit points per second.|
-|Gargoyle|HP < maxHP/2|HP = maxHP|random between 20×maxHP/64 and|
-||||20×maxHP/128 hit points per second2.|
-|Grave Digger|HP < maxHP/2|HP > 3×maxHp/4|1\.25 hit points per second.|
+| **Monster Type** | **When to Start Healing** | **When to Stop Healing** | **Rate**<sup>[^1]</sup> |
+|---------------|:------------------:|:----------------:|----------------------------------|
+| **Scavenger** | `HP < maxHP/2` | `HP > 3×maxHP/4` | `1.82` hit points per second. |
+| **Gargoyle** | `HP < maxHP/2` | `HP = maxHP` | Random between `20×maxHP/64` and `20×maxHP/128` hit points per second<sup>[^2]</sup>. |
+| **Grave Digger** | `HP < maxHP/2` | `HP > 3×maxHP/4` | `1.25` hit points per second. |
 
-1. Note that they still get the normal regeneration rate on top of the faster one.
-1. The time to completely regenerate HP is thus fixed to between 3.2 and 6.4 seconds.
+[^1]: Monsters still receive their normal regeneration rate on top of the faster one.  
+[^2]: The time to fully regenerate HP is fixed between `3.2` and `6.4` seconds.
 
 Regeneration of hit points, as well as any other activity on a dungeon level, only works when the level is ”active”, that is, when at least one character is present on the level. When a level is later reactivated by any character entering it, monsters will have the exact same number of hit points as when the last character left the level.
 
+**Armor Class**
 
-|**Armor Class**||
-| :- | :- |
-|Nightmare:|normal + 50|
-|Hell:|normal + 80|
+| **Difficulty** | **Armor Class** |
+|----------------|-----------------|
+| **Nightmare:** | `normal + 50`   |
+| **Hell:**      | `normal + 80`   |
+
 
 Note that there is a bug in Hellfire that causes any monster having an AC above 127 to instead have a very low, or even negative, AC.
 
@@ -66,75 +71,64 @@ Note that there is a bug in Hellfire that causes any monster having an AC above 
 
 All data for To Hit in the tables are for the physical attacks only. Magic attacks do not use any base To Hit. The damage value is usually used both for melee and magic attacks. For magic attacks, see chapter 4.2. Some monsters have more than one melee attack. Sometime they are connected in the way that each attack animation (that is each attack) has two chances of hitting at different times of the animation. They can hit with both their hands. An example of this is the Lightning Demons. In the other cases it is two different attacks (with two different animations) and the monster can only do one of them at a time. An example of this is the Overlords which can attack with either hand or the Spitting Terrors which can either attack in melee or cast a spell (spit). The table will only hold information about the main melee attack while information about the second melee attack or the spell attack is given in the notes. Often the second melee attack is sort of crippled in that the base To Hit and damage are both 0 on normal difficulty (and upgraded normally for difficulty) which make it more or less ineffective as it hardly ever hit and when it do it, it do none or neglectable damage.
 
-
-|**To Hit**||
-| :- | :- |
-|Nightmare:|normal + 85|
-|Hell:|normal + 120|
+| **Difficulty** | **To Hit** |
+|--------------|------------|
+| **Nightmare:** | `normal + 85` |
+| **Hell:**     | `normal + 120` |
 
 Note that the To Hit values shown in the tables are the *base* To Hit chance a monster has. The formula for a monster hitting a player is:
 
-|To Hit with melee attack:|30 + base + 2×(mlvl - clvl)||
-| :- | :- | :- |
-|To Hit with arrow attack:|30|+ base + 2×(mlvl - clvl) - 2×distance|
-|To Hit with magic attack:|40|+ 2×(mlvl - clvl)|
+| **Attack Type**                 | **Formula**                                      |
+|---------------------------------|--------------------------------------------------|
+| **To Hit with melee attack:**   | `30 + base + 2 × (mlvl - clvl)`                    |
+| **To Hit with arrow attack:**   | `30 + base + 2 × (mlvl - clvl) - 2 × distance`       |
+| **To Hit with magic attack:**   | `40 + 2 × (mlvl - clvl)`                           |
 
 - The term *base* refers to the To Hit values found in the tables. For charges, it is always 500.
-
 - All magic attacks will always check for To Hit, even for spells like Lightning and Inferno.
-
 - Distance is actually a time count. It goes up by 20 each second. Arrows always have a distance factor, even if they have extra fire or lightning damage. For more information see chapters 4.1.2.
-
 - To get the final chance of hitting, you subtract the AC of the enemy (normally a player) except if it is a magic attack, of course.
 - For more detailed information about battle between players and monsters, see chapter 6.
 
 Each monster also has an automatic To Hit value, just like players (monsters don’t have any chance to automatically miss unless fighting other monsters; in that case, they use the same chance to automatically hit or miss as players do). This indicates the chance of a hit regardless of the player’s AC. So even with an AC of 500, monsters will sometimes hit you. The attack can still be blocked, however. The auto To Hit values are listed below.
 
-|melee:|15%|
-| :- | -: |
-|arrow:|10%|
-|magic:|10%|
-|on dungeon level 14:|20%|
-|on dungeon level 15:|25%|
-|on dungeon level 16:|30%|
+| **Attack Type**          | **Minimum Chance To Hit** |
+|--------------------------|--------------------------|
+| **Melee:**               | 15%                      |
+| **Arrow:**               | 10%                      |
+| **Magic:**               | 10%                      |
+| **On dungeon level 14:** | 20%                      |
+| **On dungeon level 15:** | 25%                      |
+| **On dungeon level 16:** | 30%                      |
 
 - The auto To Hit values for special dungeon levels apply to all types of attack (melee, arrow and magic).
-
 - In multi player the game uses a rather bad way to keep the computers in synchronization with each other, this may at times lead to strange results as far as monsters attacking are concerned. It may for example seem that the monster get ”stuck” and misses the player for way to long time. For more information, see chapter 5.5.8.
 
 **Damage**
 
-Nightmare:	2×normal + 4
+| **Difficulty** | **Damage**     |
+|----------------|----------------|
+| **Nightmare:** | `2 × normal + 4` |
+| **Hell:**      | `4 × normal + 6` |
 
-Hell:	4×normal + 6
+**Resistance and Immunity**
 
-
-**Resistance and immunity**
-
-Nightmare:	same as in normal
-
-Hell:	different resistances and immunities, but normally they gain extra
-
-resistances and/or immunities and some of the resistances are turned
-
-into immunities. Exceptions exist, though. Unique monsters have the
-
-same resistances and immunities as in normal difficulty.
+| **Difficulty** | **Resistance/Immunity** |
+|--------------|-------------------------|
+| **Nightmare:** | Same as in normal. |
+| **Hell:** | Different resistances and immunities, but they generally gain extra resistances and/or immunities. Some resistances are turned into immunities. Exceptions exist, though. Unique monsters retain the same resistances and immunities as in normal difficulty. |
 
 - When a monster is resistant to a spell type the damage is always reduced by 75%.
-
 - All monsters, except undead ones and Diablo, are immune to Holy Bolt.
-
 - In Hellfire, Diablo and Bone Demons are resistant to Holy Bolt.
-
 - Diablo and Na-Krul are immune to Stone Curse.
-
 - No monster is immune or resistant to Apocalypse.
 
 **Experience points**
 
 The experience points gained for killing a monster is explained in chapter 2.6. The base experience points used for those calculations are adjusted according to:
 
-Nightmare:	2×normal + 2000
-
-Hell:	4×normal + 4000
+| **Difficulty** | **Experience Points** |
+|----------------|-----------------------|
+| **Nightmare:** | `2 × normal + 2000`   |
+| **Hell:**      | `4 × normal + 4000`   |
